--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,12 @@
                 <ul class="projects-list">
                     <li class="project-card">
                         <a href="" class="project-link">
-                            <img src="./images/techo.jpg" alt="Веб-сайт Технокряк" width="370" class="card-image">
+                            <div class="image-overlay">
+                                <img src="./images/techo.jpg" alt="Веб-сайт Технокряк" width="370" class="card-image">
+                                <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            
                             <div class="card-border">
                                 <h2 class="project-title">Технокряк</h2>
                                 <p class="project-description">Веб-сайт</p>
