--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!--Hero section-->
         <section class="hero-section">
             <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <button type="button" class="primary-button">Заказать услугу</button>
+            <button type="button" class="primary-button" data-modal-open>Заказать услугу</button>
         </section>
 
         <!--Description section-->
@@ -109,9 +109,18 @@
             <div class="container">
                 <h2 class="main-title">Чем мы занимаемся</h2>
                 <ul class="work-list">
-                    <li class="work-item"><img src="./images/box-1.png" alt="ПК" width="370"></li>
-                    <li class="work-item"><img src="./images/box-2.png" alt="Телефон" width="370"></li>
-                    <li class="work-item"><img src="./images/box-3.png" alt="Планшет" width="370"></li>
+                    <li class="work-item">
+                        <img src="./images/box-1.png" alt="ПК" width="370" class="work-img">
+                        <p class="work-descr">Десктопные приложения</p>
+                    </li>
+                    <li class="work-item">
+                        <img src="./images/box-2.png" alt="Телефон" width="370" class="work-img">
+                        <p class="work-descr">Мобильные приложения</p>
+                    </li>
+                    <li class="work-item">
+                        <img src="./images/box-3.png" alt="Планшет" width="370" class="work-img">
+                        <p class="work-descr">Дизайнерские решения</p>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -384,6 +393,17 @@
         </div>
     </footer>
 
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="close-border" data-modal-close>
+                <svg width="20" height="20">
+                    <use href="./images/close.svg"></use>
+                </svg>
+                
+            </button>
+        </div>
+    </div>
+<script src="./js/modal.js"></script>
 </body>
 
 </html>
