--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         <div class="modal">
             <button type="button" class="close-border" data-modal-close>
                 <svg width="20" height="20">
-                    <use href="./images/close.svg"></use>
+                    <use href="./images/icons.svg#icon-close"></use>
                 </svg>
                 
             </button>
