--- a/index.html
+++ b/index.html
@@ -111,15 +111,21 @@
                 <ul class="work-list">
                     <li class="work-item">
                         <img src="./images/box-1.png" alt="ПК" width="370" class="work-img">
-                        <p class="work-descr">Десктопные приложения</p>
+                        <div class="work-img-over">
+                            <p class="work-descr">Десктопные приложения</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./images/box-2.png" alt="Телефон" width="370" class="work-img">
-                        <p class="work-descr">Мобильные приложения</p>
+                        <div class="work-img-over">
+                            <p class="work-descr">Мобильные приложения</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./images/box-3.png" alt="Планшет" width="370" class="work-img">
-                        <p class="work-descr">Дизайнерские решения</p>
+                        <div class="work-img-over">
+                            <p class="work-descr">Дизайнерские решения</p>
+                        </div>
                     </li>
                 </ul>
             </div>
