--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
                     <li class="project-card">
                         <div class="image-overlay">
                             <img src="./images/techo.jpg" alt="Веб-сайт Технокряк" width="370" class="card-image">
-                            <div>
+                            <div class="card-over">
                                 <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
@@ -85,7 +85,7 @@
                     <li class="project-card">
                         <div class="image-overlay">
                             <img src="./images/new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" class="card-image">
-                            <div>
+                            <div class="card-over">
                                 <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
@@ -99,7 +99,7 @@
                     <li class="project-card">
                         <div class="image-overlay">
                             <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370" class="card-image">
-                            <div>
+                            <div class="card-over">
                                 <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
@@ -113,7 +113,7 @@
                     <li class="project-card">
                         <div class="image-overlay">
                             <img src="./images/prime.jpg" alt="Проект Prime" width="370" class="card-image">
-                            <div>
+                            <div class="card-over">
                                 <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
@@ -127,7 +127,7 @@
                     <li class="project-card">
                         <div class="image-overlay">
                             <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" class="card-image">
-                            <div>
+                            <div class="card-over">
                                 <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
@@ -141,7 +141,7 @@
                     <li class="project-card">
                         <div class="image-overlay">
                             <img src="./images/inspiration.jpg" alt="Веб-сайт Inspiration has no Borders" width="370" class="card-image">
-                            <div>
+                            <div class="card-over">
                                 <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
@@ -155,7 +155,7 @@
                     <li class="project-card">
                         <div class="image-overlay">
                             <img src="./images/limited-edition.jpg" alt="Издание Limited Edition" width="370" class="card-image">
-                            <div>
+                            <div class="card-over">
                                 <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
@@ -169,7 +169,7 @@
                     <li class="project-card">
                         <div class="image-overlay">
                             <img src="./images/lab.jpg" alt="Проект LAB" width="370" class="card-image">
-                            <div>
+                            <div class="card-over">
                                 <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
@@ -183,7 +183,7 @@
                     <li class="project-card">
                         <div class="image-overlay">
                             <img src="./images/growing-business.jpg" alt="Приложение Growing Business" width="370" class="card-image">
-                            <div>
+                            <div class="card-over">
                                 <p class="card-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
